<resources>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_game">&#xf11b;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_angle_right">&#xf105;</string>
    <string name="app_name">QuiZity</string>
    <string name="action_settings">Settings</string>

    <string name="play">Play game</string>
    <string name="highscore">Highscore</string>
    <string name="howTo">Instructions</string>

    <string name="enterName">Name</string>
    <string name="startGame">Start game</string>
    <string name="errorNoName">Please enter your name</string>

    <string name="placeHolderCity">no city</string>
    <string name="gamePlay">gameplay</string>
    <string name="round">Round: </string>
    <string name="score">Score: 0</string>
    <string name="total_time">Total time: 0</string>

    <string name="hs_name">Name: </string>
    <string name="hs_score">score: </string>
    <string name="instructions">A random cityname will show up.\nClick on the correct image as fast as possible.</string>
    <string name="nameAlreadyExists">Name already exist in highscore</string>


</resources>
